# ticket-data-extraction

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
api/: dependencies.py  main.py  schemas.py
config/: data.yaml  training_config.yaml
src/: evaluate.py  inference.py  prepare_data.py  train.py
tests/: test_inference.py
