[project]
name = "ticket-data-extraction-api"
version = "0.1.0"
requires-python = ">=3.13"

dependencies = [
    "ultralytics==8.4.60",
    "fastapi",
    "torch>=2.12.0",
    "transformers>=5.9.0",
    "datasets>=4.8.5",
    "peft>=0.19.1",
    "mlflow>=3.13.0",
    "scikit-learn>=1.8.0",
    "pandas>=2.2.3",
    "numpy>=2.4.6",
    "pyyaml>=6.0.3",
    "pytest>=9.0.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "black>=26.5.1",
    "ruff>=0.15.15",
]
