[project]
name = "ticket-data-extraction-api"
version = "0.1.0"
requires-python = ">=3.13"

dependencies = [
    "fastapi==0.136.3",
    "mlflow>=3.13.0",
    "uvicorn==0.48.0",
    "python-multipart==0.0.30",
    "pillow==12.2.0",
    "numpy>=2.4.6",
    "pyyaml>=6.0.3",
    "httpx==0.28.1",
    "onnx==1.21.0",
    "onnxruntime>=1.26.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.15",
    "ipykernel>=7.2.0",
]
